# mac-local-vlm-server

./: .gitignore  Cargo.toml  README.md  config.toml  local_vlm_server.py  vlm_infer.py
src/: config.rs  main.rs  service.rs  vlm_infer.rs
