[package]
name = "llm-server"
version = "0.1.0"
edition = "2021"
authors = ["sophrosynex"]
license = "MIT"

[[bin]]
name = "llm-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sysinfo = "0.30"
